static/css/custom-style.css
:root {
    --color-text-light: #9a9a9a;
}

.theme-base-08 {--color-primary: #ac4142;}
.theme-base-09 {--color-primary: #d28445;}
.theme-base-0a {--color-primary: #f4bf75;}
.theme-base-0b {--color-primary: #90a959;}
.theme-base-0c {--color-primary: #75b5aa;}
.theme-base-0d {--color-primary: #6a9fb5;}
.theme-base-0e {--color-primary: #aa759f;}
.theme-base-0f {--color-primary: #8f5536;}

img[src=""] { display:none }

/* Theme override */
.item__date { margin-top: 0px; }
/* Theme override */

.post-list-item-details {
    display: flex;
    justify-content: space-between;
    margin-top: 0.2rem;
}

.external-post-marker {
    color: var(--color-text-light);
}

.portfolio-title {
    color: var(--color-main);
    text-align: center;
    border-bottom: 2px solid var(--color-primary);
}

.collapsible-label {
    display: block;
    cursor: pointer;
    padding-bottom: 2px;
}

.collapsible-label:hover {
    padding-bottom: 0px;
    border-bottom: 2px solid var(--color-primary);
}

input[type="checkbox"].collapsible-toggle {
    display: none;
}

input[type="checkbox"].collapsible-toggle + .collapsible-text {
    opacity: 0;
    max-height: 0px;
    overflow: hidden;

    transition: 0.2s ease-in-out;
}

input[type="checkbox"].collapsible-toggle:checked + .collapsible-text {
    opacity: 1;
    max-height: 15rem;
}

